# irimodel

./: CMakeLists.txt  README.md  igrf.for  irifun.for  iripath.for  irisub.for
